# quantum-benchmarks

./: README.md  diamond.csv  diamond.xlsx  fidelity plots.nb  gate fidelities.xlsx  plots.py  pyproject.toml  rydbergs.xlsx  silicon.csv  silicon.xlsx  summary.md  superconducting.xlsx  trapped ions.csv  trapped ions.xlsx
entanglement fidelities/data/: rydbergs.csv
entanglement_fidelities/: plotting.py  summary.md
entanglement_fidelities/data/: Gate fidelities-Rydbergs.bib  Gate fidelities-Silicon.bib  Gate fidelities-Spins in diamond.bib  Gate fidelities-Superconducting.bib  Gate fidelities-Trapped ion.bib  entanglement_fidelities.bib  superconducting.csv  trapped_ions.csv
entanglement_size/: plotting.py  summary.md
entanglement_size/data/: multi_dof_photons.csv  neutrals.csv  trapped_ions.csv
quantum_benchmarks/entanglement_fidelities/: plotting.py  summary.md
quantum_benchmarks/entanglement_fidelities/data/: diamond.csv  rydbergs.csv  silicon.csv  superconducting.csv  trapped_ions.csv
quantum_benchmarks/entanglement_size/: plotting.py
quantum_benchmarks/entanglement_size/data/: entanglement_size.bib  neutrals.csv  photons.csv  superconducting.csv
