[tool.poetry]
name = "quantum_benchmarks"
version = "0.1.0"
description = ""
authors = ["Maciej Malinowski <msmalina@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.1"
matplotlib = "^3.5.3"
pandas = "^1.4.3"
poethepoet = "^0.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
plot-fidelities = "python .\\quantum_benchmarks\\entanglement_fidelities\\plotting.py"
plot-sizes = "python .\\quantum_benchmarks\\entanglement_size\\plotting.py"
plot-all = [
    { ref = "plot-fidelities" },
    { ref = "plot-sizes" }
    ]